--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -13,7 +13,7 @@
     <string name="video_recording_failed">הקלטת הווידאו נכשלה, נסה להשתמש ברזולוציה אחרת</string>
     <string name="faq_1_title">איזו איכות דחיסת תמונה עלי להגדיר\?</string>
     <string name="faq_1_text">זה תלוי במטרה שלך. למטרות כלליות רוב האנשים ממליצים להשתמש ב-75%-80%, כאשר התמונה עדיין באיכות טובה, אך גודל הקובץ מצטמצם באופן דרסטי בהשוואה ל-100%.</string>
-    <string name="save_photos">שמור תמונות וסרטונים ב</string>
+    <string name="save_photos">בחר נתיב לשמירת</string>
     <string name="show_preview">הצג תצוגה מקדימה של תמונה לאחר הצילום</string>
     <string name="shutter_sound">צליל תריס</string>
     <string name="back_camera">רזולוציות של מצלמה אחורית</string>
@@ -30,7 +30,7 @@
     <string name="photo_compression_quality">איכות דחיסת תמונה</string>
     <string name="shutter">תריס</string>
     <string name="capture_mode">סוג צילום</string>
-    <string name="maximize_quality">מקסימום איכות</string>
+    <string name="maximize_quality">איכות מקסימלית</string>
     <string name="minimize_latency">מינימום זמן השהיה (latency)</string>
     <string name="camera_disabled_by_admin_error">המצלמה מושבתת על ידי מנהל המערכת</string>
     <string name="camera_in_use_error">המצלמה נמצאת בשימוש על ידי אפליקציה אחרת, אנא סגור את האפליקציה ונסה שוב</string>
