--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_launcher_name">Câmera</string>
+    <string name="app_launcher_name">Fossify - Câmera</string>
     <string name="capture_mode">Modo de captura</string>
     <string name="maximize_quality">Maximizar a qualidade</string>
     <string name="minimize_latency">Minimizar a latência</string>
