chore(l10n): update Romanian translations
Currently translated at 100.0% (45 of 45 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/ro/
Via: Weblate

--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -14,34 +14,35 @@
     <string name="camera_in_use_error">Camera este utilizată de altă aplicație, închide aplicația și încearcă din nou</string>
     <string name="camera_configure_error">A apărut o eroare în timpul configurării camerei</string>
     <string name="camera_disabled_by_admin_error">Camera este dezactivată de către administrator</string>
-    <string name="camera_dnd_error">Modul Nu deranjați este activat. Vă rugăm să-l dezactivați și să încercați din nou</string>
-    <string name="photo_capture_failed">Captură foto eșuată</string>
+    <string name="camera_dnd_error">Modul Nu deranjați este activat. Dezactivează-l și încearcă din nou</string>
+    <string name="photo_capture_failed">Crearea fotografiei a eșuat</string>
     <string name="video_capture_insufficient_storage_error">Înregistrarea video a eșuat din cauza stocării insuficiente</string>
     <string name="toggle_photo_video">Comutarea modului foto/video</string>
     <string name="change_resolution">Modificarea rezoluției</string>
-    <string name="view_last_media">Vizualizați ultimul suport media capturat</string>
+    <string name="view_last_media">Vizualizarea ultimului suport media capturat</string>
     <string name="toggle_camera">Comutarea camerei față/spate</string>
-    <string name="toggle_flash">Comutatarea modului lanternă</string>
+    <string name="toggle_flash">Comutarea modului lanternă</string>
     <string name="faq_1_title">Ce calitate de compresie a fotografiilor ar trebui să setez?</string>
-    <string name="faq_1_text">Depinde de obiectivul dumneavoastră. În general, majoritatea oamenilor recomandă utilizarea a 75%-80%, atunci când calitatea imaginii este foarte bună, dar dimensiunea fișierului este redusă drastic în comparație cu 100%.</string>
-    <string name="save_photos">Salvați fotografii și clipuri video pe</string>
-    <string name="show_preview">Afișați o previzualizare a fotografiei după captură</string>
-    <string name="shutter_sound">Sunetul de declanșare</string>
+    <string name="faq_1_text">Depinde de obiectiv. În general, majoritatea oamenilor recomandă utilizarea a 75%-80%, atunci când calitatea imaginii este foarte bună, dar dimensiunea fișierului este redusă drastic în comparație cu 100%.</string>
+    <string name="save_photos">Salvează fotografii și videoclipuri pe</string>
+    <string name="show_preview">Afișează o previzualizare a fotografiei după capturare</string>
+    <string name="shutter_sound">Sunet declanșator</string>
     <string name="back_camera">Rezoluțiile camerei din spate</string>
     <string name="front_camera">Rezoluțiile camerei frontale</string>
     <string name="photo">Foto</string>
-    <string name="focus_before_capture">Focalizează înainte de captură</string>
-    <string name="volume_buttons_as_shutter">Utilizați butoanele de volum ca declanșator</string>
-    <string name="turn_flash_off_at_startup">Dezactivați blițul la pornire</string>
-    <string name="flip_front_camera_photos_horizontally">Întoarceți fotografiile cu camera frontală pe orizontală</string>
-    <string name="keep_settings_visible">Păstrați vizibile butoanele de setări</string>
-    <string name="always_open_back_camera">Deschideți întotdeauna aplicația cu camera din spate</string>
-    <string name="save_photo_metadata">Salvați metadatele exif ale fotografiilor</string>
+    <string name="focus_before_capture">Focalizează înainte de capturare</string>
+    <string name="volume_buttons_as_shutter">Utilizează butoanele de volum ca declanșator</string>
+    <string name="turn_flash_off_at_startup">Dezactivează blițul la pornire</string>
+    <string name="flip_front_camera_photos_horizontally">Întoarce fotografiile cu camera frontală pe orizontală</string>
+    <string name="keep_settings_visible">Păstrează vizibile butoanele de setări</string>
+    <string name="always_open_back_camera">Deschide întotdeauna aplicația cu camera din spate</string>
+    <string name="save_photo_metadata">Salvează metadatele exif ale fotografiilor</string>
     <string name="photo_compression_quality">Calitatea comprimării fotografiilor</string>
     <string name="shutter">Declanșator</string>
-    <string name="capture_mode">Modul de captură</string>
+    <string name="capture_mode">Modul de capturare</string>
     <string name="maximize_quality">Maximizează calitatea</string>
     <string name="minimize_latency">Minimizează latența</string>
-    <string name="save_photo_video_location">Salvează poziția pentru poze și video</string>
-    <string name="toggle_timer">Act/Dez Temporizatorul</string>
+    <string name="save_photo_video_location">Salvează locația pentru poze și video</string>
+    <string name="toggle_timer">Comutare temporizator</string>
+    <string name="video">Video</string>
 </resources>
