chore(l10n): update Belarusian translations
Currently translated at 77.7% (35 of 45 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/be/
Via: Weblate

--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -17,7 +17,7 @@
     <string name="photo_capture_failed">Збой фотаздымкі</string>
     <string name="video_capture_insufficient_storage_error">Збой запісу відэа з-за недахопу памяці</string>
     <string name="faq_1_title">Якую якасць сціску фатаграфій трэба ўсталяваць\?</string>
-    <string name="faq_1_text">Гэта залежыць ад вашай мэты. Для агульных мэтаў большасць людзей раяць выкарыстоўваць 75% -80%, калі малюнак па-ранейшаму сапраўды добрага якасці, але Памер файла рэзка памяншаецца ў параўнанні са 100%.</string>
+    <string name="faq_1_text">Гэта залежыць ад вашай мэты. Для агульных мэтаў большасць людзей раяць выкарыстоўваць 75% -80%, калі малюнак па-ранейшаму сапраўды добрага якасці, але памер файла рэзка памяншаецца ў параўнанні са 100%.</string>
     <string name="save_photos">Захаваць фатаграфіі і відэа ў</string>
     <string name="show_preview">Паказаць папярэдні прагляд фота пасля здымкі</string>
     <string name="shutter_sound">Гук затвора</string>
