chore(l10n): update Spanish (American) translations
Currently translated at 6.6% (3 of 45 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/es_US/
Via: Weblate

--- a/app/src/main/res/values-es-rUS/strings.xml
+++ b/app/src/main/res/values-es-rUS/strings.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="app_launcher_name">Cámara</string>
+    <string name="capture_mode">Modo de captura</string>
+    <string name="maximize_quality">Maximice la calidad</string>
+</resources>
