--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -15,4 +15,13 @@
     <string name="setting_resolution_failed">Bereizmen egokia ezartzeak huts egin du</string>
     <string name="video_recording_failed">Bideo-grabazioak huts egin du, saiatu beste bereizmen bat erabiltzen</string>
     <string name="camera_in_use_error">Kamera beste aplikazio bat erabiltzen ari da, mesedez, itxi aplikazioa eta saiatu berriro</string>
+    <string name="camera_configure_error">Errorea gertatu da kamera konfiguratzean</string>
+    <string name="camera_disabled_by_admin_error">Administratzaileak desaktibatu du kamera</string>
+    <string name="camera_dnd_error">\"Ez molestatu\" modua aktibatuta dago. Desaktibatu eta saiatu berriro</string>
+    <string name="photo_capture_failed">Errorea argazkia egitean</string>
+    <string name="video_capture_insufficient_storage_error">Bideoaren grabazioak huts egin du, ez dagoelako behar adina leku biltegiratzeko</string>
+    <string name="toggle_photo_video">Txandakatu argazkia/bideo modua</string>
+    <string name="change_resolution">Aldatu bereizmena</string>
+    <string name="view_last_media">Ikusi atzemandako azken multimediak</string>
+    <string name="toggle_camera">Aldatu aurreko/atzeko kamera</string>
 </resources>
