chore(l10n): update Danish translations
Currently translated at 100.0% (45 of 45 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/da/
Via: Weblate

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -14,16 +14,16 @@
     <string name="camera_in_use_error">Kameraet bruges af en anden app. Luk appen, og prøv igen.</string>
     <string name="camera_configure_error">Der opstod en fejl under konfigurationen af kameraet</string>
     <string name="camera_disabled_by_admin_error">Kameraet er deaktiveret af administratoren</string>
-    <string name="camera_dnd_error">Tilstanden for ikke forstyrre er aktiveret. Deaktiver den og prøv igen</string>
+    <string name="camera_dnd_error">Forstyr ikke-tilstand er aktiveret. Deaktiver og prøv igen</string>
     <string name="photo_capture_failed">Fotooptagelse mislykkedes</string>
-    <string name="video_capture_insufficient_storage_error">Videooptagelse mislykkedes på grund af utilstrækkelig lagerplads</string>
+    <string name="video_capture_insufficient_storage_error">Videooptagelse mislykkedes grundet utilstrækkelig lagerplads</string>
     <string name="faq_1_title">Hvilken fotokomprimeringskvalitet skal jeg anvende\?</string>
-    <string name="faq_1_text">Det afhænger af dit mål. Til almindelige formål anbefaler de fleste at bruge 75%-80%, hvor billedet stadig har en rigtig god kvalitet, men hvor filstørrelsen er reduceret drastisk i forhold til 100 %.</string>
+    <string name="faq_1_text">Det afhænger af dit mål. Til generelt brug anbefaler de fleste 75%-80%, hvor billedet stadig har rigtig god kvalitet, men filstørrelsen er markant mindre end ved 100%.</string>
     <string name="save_photos">Gem fotos og videoer til</string>
-    <string name="show_preview">Vis en forhåndsvisning af et foto efter optagelse</string>
+    <string name="show_preview">Vis en forhåndsvisning af foto efter optagelse</string>
     <string name="shutter_sound">Lukkerlyd</string>
-    <string name="back_camera">Opløsninger for kamera på bagsiden</string>
-    <string name="front_camera">Opløsninger for kamera på forsiden</string>
+    <string name="back_camera">Bagkamera-opløsninger</string>
+    <string name="front_camera">Frontkamera-opløsninger</string>
     <string name="photo">Foto</string>
     <string name="focus_before_capture">Fokuser før optagelse</string>
     <string name="volume_buttons_as_shutter">Brug lydstyrkeknapperne som lukker</string>
@@ -36,11 +36,11 @@
     <string name="shutter">Lukker</string>
     <string name="minimize_latency">Minimer ventetid</string>
     <string name="maximize_quality">Maksimer kvalitet</string>
-    <string name="toggle_photo_video">Skift mellem foto- og videotilstand</string>
+    <string name="toggle_photo_video">Skift mellem foto-/videotilstand</string>
     <string name="change_resolution">Skift opløsning</string>
     <string name="capture_mode">Optagetilstand</string>
-    <string name="view_last_media">Se de senest optagne medier</string>
-    <string name="toggle_camera">Skift for-/bagkamera</string>
+    <string name="view_last_media">Se sidst optagede medier</string>
+    <string name="toggle_camera">Skift mellem front-/bagkamera</string>
     <string name="toggle_flash">Slå flash til/fra</string>
     <string name="toggle_timer">Slå timertilstand til/fra</string>
     <string name="video">Video</string>
