chore(l10n): update Occitan translations
Currently translated at 15.5% (7 of 45 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/oc/
Via: Weblate

--- a/app/src/main/res/values-oc/strings.xml
+++ b/app/src/main/res/values-oc/strings.xml
@@ -5,4 +5,6 @@
     <string name="maximize_quality">Maximizar la qualitat</string>
     <string name="minimize_latency">Minimizar la laténcia</string>
     <string name="camera_unavailable">Aparelh de fòto indisponible</string>
+    <string name="camera_open_error">Una error s\'es producha pendent l\'accès a la camèra</string>
+    <string name="video_creating_error">Una error s\'es producha al moment de la creacion del fichièr vidèo</string>
 </resources>
