--- a/app/src/main/res/values-ca@valencia/strings.xml
+++ b/app/src/main/res/values-ca@valencia/strings.xml
@@ -1,3 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_launcher_name">Càmera</string>
+    <string name="capture_mode">Mode de captura</string>
+    <string name="maximize_quality">Maximitzar la qualitat</string>
+    <string name="minimize_latency">Minimitzar la latència</string>
+    <string name="camera_unavailable">Càmera no disponible</string>
+    <string name="camera_open_error">S\'ha produït un error en accedir a la càmera</string>
+    <string name="video_creating_error">S\'ha produït un error en crear el fitxer de vídeo</string>
+    <string name="video_mode_error">Ha fallat en canviar al mode de vídeo</string>
+    <string name="save_error_internal_storage">S\'ha produït un error, la carpeta de gravació s\'ha canviat a l\'emmagatzematge intern</string>
+    <string name="camera_switch_error">Ha fallat en commutar la càmera</string>
+    <string name="click_to_resume_preview">Feu clic a la imatge per a reprendre la vista prèvia</string>
+    <string name="photo_not_saved">No s\'ha pogut gravar la foto</string>
+    <string name="setting_resolution_failed">No s\'ha pogut establir la resolució adequada</string>
+    <string name="video_recording_failed">Ha fallat la gravació de vídeo, proveu d\'utilitzar una resolució diferent</string>
+    <string name="camera_in_use_error">Una altra aplicació està utilitzant la càmera; tanqueu l\'aplicació i torneu-ho a provar</string>
+    <string name="camera_configure_error">S\'ha produït un error en configurar la càmera</string>
+    <string name="camera_disabled_by_admin_error">L\'administrador(a) ha desactivat la càmera</string>
+    <string name="camera_dnd_error">El mode «No molestar» està habilitat. Desactiveu-lo i torneu-ho a provar</string>
+    <string name="photo_capture_failed">La captura de fotos ha fallat</string>
+    <string name="video_capture_insufficient_storage_error">La gravació del vídeo ha fallat a causa d\'un emmagatzematge insuficient</string>
+    <string name="toggle_photo_video">Commuta el mode de foto/vídeo</string>
+    <string name="change_resolution">Canviar la resolució</string>
+    <string name="view_last_media">Visualitzar l\'últim contingut multimèdia capturat</string>
+    <string name="toggle_camera">Commutar la càmera frontal/posterior</string>
+    <string name="toggle_flash">Commutar el mode de la llum de flaix</string>
+    <string name="toggle_timer">Commutar el mode temporitzador</string>
+    <string name="faq_1_title">Quina qualitat de compressió fotogràfica he d\'establir?</string>
+    <string name="faq_1_text">Depèn del vostre objectiu. Amb finalitats genèriques, la majoria de la gent aconsella utilitzar un 75%-80%, quan la imatge encara és de molt bona qualitat, però la mida del fitxer es redueix dràsticament en comparació amb el 100%.</string>
+    <string name="save_photos">Alçar fotos i vídeos a</string>
+    <string name="show_preview">Mostrar una vista prèvia de la foto després de la captura</string>
+    <string name="shutter_sound">So de l\'obturador</string>
+    <string name="back_camera">Resolucions de la càmera posterior</string>
+    <string name="front_camera">Resolucions de la càmera frontal</string>
+    <string name="photo">Foto</string>
+    <string name="video">Vídeo</string>
+    <string name="focus_before_capture">Focus abans de la captura</string>
+    <string name="volume_buttons_as_shutter">Utilitzar els botons de volum com a obturador</string>
+    <string name="turn_flash_off_at_startup">Apagar el flaix a l\'inici</string>
+    <string name="flip_front_camera_photos_horizontally">Invertix les fotos de la càmera frontal horitzontalment</string>
+    <string name="keep_settings_visible">Manté els botons de configuració visibles</string>
+    <string name="always_open_back_camera">Obre sempre l\'aplicació amb la càmera del darrere</string>
+    <string name="save_photo_metadata">Gravar les metadades Exif de la foto</string>
+    <string name="save_photo_video_location">Gravar la ubicació de les fotos i els vídeos</string>
+    <string name="photo_compression_quality">Qualitat de compressió fotogràfica</string>
+    <string name="shutter">Obturador</string>
 </resources>
