chore(l10n): update Catalan translations
Currently translated at 100.0% (45 of 45 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/ca/
Via: Weblate

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="app_launcher_name">Càmera</string>
     <string name="capture_mode">Mode de captura</string>
-    <string name="maximize_quality">Maximitzar la qualitat</string>
-    <string name="minimize_latency">Minimitzar la latència</string>
+    <string name="maximize_quality">Maximitza la qualitat</string>
+    <string name="minimize_latency">Minimitza la latència</string>
     <string name="camera_unavailable">Càmera no disponible</string>
     <string name="camera_open_error">S\'ha produït un error en accedir a la càmera</string>
     <string name="video_creating_error">S\'ha produït un error en crear el fitxer de vídeo</string>
@@ -21,28 +21,28 @@
     <string name="photo_capture_failed">La captura de fotos ha fallat</string>
     <string name="video_capture_insufficient_storage_error">La gravació del vídeo ha fallat a causa d\'un emmagatzematge insuficient</string>
     <string name="toggle_photo_video">Commuta el mode de foto/vídeo</string>
-    <string name="change_resolution">Canviar la resolució</string>
-    <string name="view_last_media">Visualitzar l\'últim contingut multimèdia capturat</string>
-    <string name="toggle_camera">Commutar la càmera frontal/posterior</string>
-    <string name="toggle_flash">Commutar el mode de la llum de flaix</string>
-    <string name="toggle_timer">Commutar el mode temporitzador</string>
+    <string name="change_resolution">Canvia la resolució</string>
+    <string name="view_last_media">Visualitza l\'últim contingut multimèdia capturat</string>
+    <string name="toggle_camera">Commuta la càmera frontal/posterior</string>
+    <string name="toggle_flash">Commuta el mode de la llum de flaix</string>
+    <string name="toggle_timer">Commuta el mode temporitzador</string>
     <string name="faq_1_title">Quina qualitat de compressió fotogràfica he d\'establir\?</string>
     <string name="faq_1_text">Depèn del vostre objectiu. Amb finalitats genèriques, la majoria de la gent aconsella utilitzar un 75%-80%, quan la imatge encara és de molt bona qualitat, però la mida del fitxer es redueix dràsticament en comparació amb el 100%.</string>
-    <string name="save_photos">Desar fotos i vídeos a</string>
-    <string name="show_preview">Mostrar una vista prèvia de la foto després de la captura</string>
+    <string name="save_photos">Desa fotos i vídeos a</string>
+    <string name="show_preview">Mostra una vista prèvia de la foto després de la captura</string>
     <string name="shutter_sound">So de l\'obturador</string>
     <string name="back_camera">Resolucions de la càmera posterior</string>
     <string name="front_camera">Resolucions de la càmera frontal</string>
     <string name="photo">Foto</string>
     <string name="video">Vídeo</string>
     <string name="focus_before_capture">Focus abans de la captura</string>
-    <string name="volume_buttons_as_shutter">Utilitzar els botons de volum com a obturador</string>
-    <string name="turn_flash_off_at_startup">Apagar el flaix a l\'inici</string>
+    <string name="volume_buttons_as_shutter">Utilitza els botons de volum com a obturador</string>
+    <string name="turn_flash_off_at_startup">Apaga el flaix a l\'inici</string>
     <string name="flip_front_camera_photos_horizontally">Inverteix les fotos de la càmera frontal horitzontalment</string>
     <string name="keep_settings_visible">Manté els botons de configuració visibles</string>
     <string name="always_open_back_camera">Obre sempre l\'aplicació amb la càmera del darrere</string>
-    <string name="save_photo_metadata">Desar les metadades Exif de la foto</string>
-    <string name="save_photo_video_location">Desar la ubicació de les fotos i els vídeos</string>
+    <string name="save_photo_metadata">Desa les metadades Exif de la foto</string>
+    <string name="save_photo_video_location">Desa la ubicació de les fotos i els vídeos</string>
     <string name="photo_compression_quality">Qualitat de compressió fotogràfica</string>
     <string name="shutter">Obturador</string>
 </resources>
