chore(l10n): update Polish translations
Currently translated at 100.0% (46 of 46 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/pl/
Via: Weblate

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -45,4 +45,5 @@
     <string name="save_photo_video_location">Zapisuj lokalizację zdjęć i wideo</string>
     <string name="photo_compression_quality">Jakość kompresji zdjęć</string>
     <string name="shutter">Migawka</string>
+    <string name="max_brightness">Maksymalna jasność ekranu na podglądzie</string>
 </resources>
