chore(l10n): update Russian translations
Currently translated at 100.0% (46 of 46 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/ru/
Via: Weblate

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -45,4 +45,5 @@
     <string name="save_photo_video_location">Сохранять место съёмки фото и видео</string>
     <string name="photo_compression_quality">Качество фото после сжатия</string>
     <string name="shutter">Затвор</string>
+    <string name="max_brightness">Максимальная яркость экрана при просмотре</string>
 </resources>
