chore(l10n): update Czech translations
Currently translated at 100.0% (46 of 46 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/cs/
Via: Weblate

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -45,4 +45,5 @@
     <string name="save_photo_video_location">Uložit polohu fotografie a videa</string>
     <string name="photo_compression_quality">Úroveň komprese fotografií</string>
     <string name="shutter">Spoušť</string>
+    <string name="max_brightness">Maximální jas obrazovky u náhledu</string>
 </resources>
