--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -45,4 +45,5 @@
     <string name="photo_compression_quality">Qualité de compression des photos</string>
     <string name="shutter">Obturateur</string>
     <string name="photo">Photo</string>
+    <string name="max_brightness">Luminosité maximale de l\'écran dans l\'aperçu</string>
 </resources>
