chore(l10n): update Spanish translations
Currently translated at 100.0% (46 of 46 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/es/
Via: Weblate

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -45,4 +45,5 @@
     <string name="photo_compression_quality">Calidad de compresión de la fotográfica</string>
     <string name="shutter">Obturador</string>
     <string name="video">Vídeo</string>
+    <string name="max_brightness">Brillo máximo de la pantalla en la vista previa</string>
 </resources>
