chore(l10n): update Croatian translations
Currently translated at 100.0% (46 of 46 strings)

Translation: Fossify/Camera
Translate-URL: https://hosted.weblate.org/projects/fossify/camera/hr/
Via: Weblate

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -45,4 +45,5 @@
     <string name="shutter">Otvor objektiva</string>
     <string name="save_photo_video_location">Spremi lokaciju fotografije i videa</string>
     <string name="video">Video</string>
+    <string name="max_brightness">Maksimalna svjetlost ekrana u pregledu</string>
 </resources>
