--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -27,7 +27,7 @@
     <string name="toggle_flash">Växla mellan ficklampans lägen</string>
     <string name="toggle_timer">Växla mellan timerlägena</string>
     <string name="faq_1_title">Vilken fotokomprimeringskvalitet ska jag använda?</string>
-    <string name="faq_1_text">Det beror på ditt mål. För generiska ändamål rekommenderar de flesta att man använder 75-80 %, då bilden fortfarande har riktigt bra kvalitet, men filstorleken minskar drastiskt jämfört med 100 %.</string>
+    <string name="faq_1_text">Det beror på ditt mål. För allmänna ändamål rekommenderar de flesta att man använder 75-80 %, då bilden fortfarande har riktigt bra kvalitet men en betydligt mindre filstorlek jämfört med 100 %.</string>
     <string name="save_photos">Spara foton och videor i</string>
     <string name="show_preview">Förhandsgranska foton efter att de har tagits</string>
     <string name="shutter_sound">Slutarljud</string>
@@ -45,4 +45,5 @@
     <string name="photo_compression_quality">Fotokomprimeringskvalitet</string>
     <string name="shutter">Slutare</string>
     <string name="video">Video</string>
+    <string name="max_brightness">Maximal skärmljusstyrka i förhandsgranskning</string>
 </resources>
