--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -45,4 +45,5 @@
     <string name="shutter">Záró</string>
     <string name="save_photo_video_location">Fénykép és videó helyének mentése</string>
     <string name="video">Videó</string>
+    <string name="max_brightness">Maximális képernyő fényerő az előnézetben</string>
 </resources>
